--- a/scripts/style.css
+++ b/scripts/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 #equityButton {
+  position: relative;
   padding: 10px;
   margin: 10px;
   background: #FFA500;
@@ -31,10 +32,25 @@ body {
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
+  -webkit-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);;
+  -moz-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 96%;
+  width: 46%;
   text-align: center;
   vertical-align: top;
+  -webkit-transition: all .1s ease;
+  -moz-transition: all .1s ease;
+  -ms-transition: all .1s ease;
+  -o-transition: all .1s ease;
+  transition: all .1s ease;
+}
+
+#equityButton:active {
+  -webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  -moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  position: relative;
+  top: 6px;
 }
 
 #showEquity {
@@ -55,6 +71,7 @@ body {
 }
 
 #purchasingformButton {
+  position: relative;
   padding: 10px;
   margin: 10px;
   background: #FFA500;
@@ -65,10 +82,25 @@ body {
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
+  -webkit-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);;
+  -moz-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width:46%;
+  width: 46%;
   text-align: center;
   vertical-align: top;
+  -webkit-transition: all .1s ease;
+  -moz-transition: all .1s ease;
+  -ms-transition: all .1s ease;
+  -o-transition: all .1s ease;
+  transition: all .1s ease;
+}
+
+#purchasingformButton:active {
+  -webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  -moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  position: relative;
+  top: 6px;
 }
 
 #showForm {
@@ -87,7 +119,8 @@ body {
   vertical-align: top;
 }
 
-#sellingformButton {
+#sellformButton {
+  position: relative;
   padding: 10px;
   margin: 10px;
   background: #FFA500;
@@ -98,10 +131,25 @@ body {
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
+  -webkit-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);;
+  -moz-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
   vertical-align: top;
+  -webkit-transition: all .1s ease;
+  -moz-transition: all .1s ease;
+  -ms-transition: all .1s ease;
+  -o-transition: all .1s ease;
+  transition: all .1s ease;
+}
+
+#sellformButton:active {
+  -webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  -moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  position: relative;
+  top: 6px;
 }
 
 #showsellForm {
@@ -121,6 +169,7 @@ body {
 }
 
 #portfolioButton {
+  position: relative;
   padding: 10px;
   margin: 10px;
   background: #FFA500;
@@ -131,10 +180,25 @@ body {
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
+  -webkit-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);;
+  -moz-box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
   vertical-align: top;
+  -webkit-transition: all .1s ease;
+  -moz-transition: all .1s ease;
+  -ms-transition: all .1s ease;
+  -o-transition: all .1s ease;
+  transition: all .1s ease;
+}
+
+#portfolioButton:active {
+  -webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  -moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+  position: relative;
+  top: 6px;
 }
 
 #showPortfolio {
@@ -349,7 +413,7 @@ body {
   font-size:1.1em;
 }
 
-#submit:hover, #submit:focus{
+#submit:active, #submit:focus{
   background-color :#399630; 
   -webkit-box-shadow: 0 0 1px rgba(0,0,0, .75);
   -moz-box-shadow: 0 0 1px rgba(0,0,0, .75); 
