--- a/scripts/style.css
+++ b/scripts/style.css
@@ -119,7 +119,7 @@ body {
   vertical-align: top;
 }
 
-#sellformButton {
+#sellingformButton {
   position: relative;
   padding: 10px;
   margin: 10px;
@@ -144,7 +144,7 @@ body {
   transition: all .1s ease;
 }
 
-#sellformButton:active {
+#sellingformButton:active {
   -webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
   -moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
   box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
